packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_11.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$ } from '@decoration/qwik';
import {foo, bar as bbar} from "../state";
import * as dep2 from "dep2";
import dep3 from "dep3/something";

export const Header = component$(() => {
    return (
        <Header onClick={$((ev) => dep3(ev))}>
            {dep2.stuff()}{bbar()}
        </Header>
    );
});

export const App = component$(() => {
    return (
        <Header>{foo()}</Header>
    );
});

============================= header_component_header_onclick_kjd9tcnknxy.tsx ==

import dep3 from "dep3/something";
export const Header_component_Header_onClick_KjD9TCNkNxY = (ev)=>dep3(ev);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/project/test.tsx\"],\"names\":[],\"mappings\":\";2DAQ2B,CAAC,KAAO,KAAK\"}")
/*
{
  "origin": "project/test.tsx",
  "name": "Header_component_Header_onClick_KjD9TCNkNxY",
  "entry": "entry_hooks",
  "displayName": "Header_component_Header_onClick",
  "hash": "KjD9TCNkNxY",
  "canonicalFilename": "header_component_header_onclick_kjd9tcnknxy",
  "extension": "tsx",
  "parent": "Header_component_UVBJuFYfvDo",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    242,
    258
  ]
}
*/
============================= header_component_uvbjufyfvdo.tsx ==

import { Header } from "./project/test";
import { bar as bbar } from "./state";
import * as dep2 from "dep2";
import { qrl } from "@decoration/qwik";
export const Header_component_UVBJuFYfvDo = ()=>{
    return <Header onClick={/*#__PURE__*/ qrl(()=>import("./entry_hooks"), "Header_component_Header_onClick_KjD9TCNkNxY")}>

            {dep2.stuff()}{bbar()}

        </Header>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/project/test.tsx\"],\"names\":[],\"mappings\":\";;;;4CAMiC,IAAM;IACnC,QACK,OAAO,wGAA8B;;YAClC,CAAC,KAAK,KAAK,IAAI,OAAO;;QAC1B,EAAE;AAEV\"}")
/*
{
  "origin": "project/test.tsx",
  "name": "Header_component_UVBJuFYfvDo",
  "entry": "entry_hooks",
  "displayName": "Header_component",
  "hash": "UVBJuFYfvDo",
  "canonicalFilename": "header_component_uvbjufyfvdo",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    194,
    323
  ]
}
*/
============================= app_component_wgkrhwxaqjs.tsx ==

import { Header } from "./project/test";
import { foo } from "./state";
export const App_component_wGkRHWXaqjs = ()=>{
    return <Header>{foo()}</Header>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/project/test.tsx\"],\"names\":[],\"mappings\":\";;yCAc8B,IAAM;IAChC,QACK,QAAQ,QAAQ;AAEzB\"}")
/*
{
  "origin": "project/test.tsx",
  "name": "App_component_wGkRHWXaqjs",
  "entry": "entry_hooks",
  "displayName": "App_component",
  "hash": "wGkRHWXaqjs",
  "canonicalFilename": "app_component_wgkrhwxaqjs",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    357,
    419
  ]
}
*/
============================= project/test.tsx ==

import { componentQrl } from "@decoration/qwik";
import { qrl } from "@decoration/qwik";
export const Header = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("../entry_hooks"), "Header_component_UVBJuFYfvDo"));
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("../entry_hooks"), "App_component_wGkRHWXaqjs"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/project/test.tsx\"],\"names\":[],\"mappings\":\";;AAMA,OAAO,MAAM,uBAAS,8FAMnB;AAEH,OAAO,MAAM,oBAAM,2FAIhB\"}")
============================= entry_hooks.js (ENTRY POINT)==

export { Header_component_Header_onClick_KjD9TCNkNxY } from "./header_component_header_onclick_kjd9tcnknxy";
export { Header_component_UVBJuFYfvDo } from "./header_component_uvbjufyfvdo";
export { App_component_wGkRHWXaqjs } from "./app_component_wgkrhwxaqjs";


None
== DIAGNOSTICS ==

[]
