packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_3.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$ } from '@decoration/qwik';
export const App = () => {
    const Header = component$(() => {
        console.log("mount");
        return (
            <div onClick={$((ctx) => console.log(ctx))}/>
        );
    });
    return Header;
});

============================= app_header_component_b9f3yeqco1w.tsx (ENTRY POINT)==

import { qrl } from "@decoration/qwik";
export const App_Header_component_B9F3YeqcO1w = ()=>{
    console.log("mount");
    return <div onClick={/*#__PURE__*/ qrl(()=>import("./app_header_component_div_onclick_ao7ui7iw6oq"), "App_Header_component_div_onClick_aO7uI7Iw6oQ")}/>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";gDAG8B,IAAM;IAC5B,QAAQ,GAAG,CAAC;IACZ,QACK,IAAI;AAEb\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_Header_component_B9F3YeqcO1w",
  "entry": null,
  "displayName": "App_Header_component",
  "hash": "B9F3YeqcO1w",
  "canonicalFilename": "app_header_component_b9f3yeqco1w",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    109,
    238
  ]
}
*/
============================= app_header_component_div_onclick_ao7ui7iw6oq.tsx (ENTRY POINT)==

export const App_Header_component_div_onClick_aO7uI7Iw6oQ = (ctx)=>console.log(ctx);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"4DAM4B,CAAC,MAAQ,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_Header_component_div_onClick_aO7uI7Iw6oQ",
  "entry": null,
  "displayName": "App_Header_component_div_onClick",
  "hash": "aO7uI7Iw6oQ",
  "canonicalFilename": "app_header_component_div_onclick_ao7ui7iw6oq",
  "extension": "tsx",
  "parent": "App_Header_component_B9F3YeqcO1w",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    192,
    217
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@decoration/qwik";
import { qrl } from "@decoration/qwik";
export const App = ()=>{
    const Header = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./app_header_component_b9f3yeqco1w"), "App_Header_component_B9F3YeqcO1w"));
    return Header;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAEA,OAAO,MAAM,MAAM,IAAM;IACrB,MAAM,uBAAS;IAMf,OAAO;AACX,EAAG\"}")
== DIAGNOSTICS ==

[]
