packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_6.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$ } from '@decoration/qwik';
export const sym1 = $((ctx) => console.log("1"));

============================= sym1_axurpxx5lak.tsx (ENTRY POINT)==

export const sym1_aXUrPXX5Lak = (ctx)=>console.log("1");


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"gCAEsB,CAAC,MAAQ,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "sym1_aXUrPXX5Lak",
  "entry": null,
  "displayName": "sym1",
  "hash": "aXUrPXX5Lak",
  "canonicalFilename": "sym1_axurpxx5lak",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    74,
    99
  ]
}
*/
============================= test.tsx ==

import { qrl } from "@decoration/qwik";
export const sym1 = /*#__PURE__*/ qrl(()=>import("./sym1_axurpxx5lak"), "sym1_aXUrPXX5Lak");


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";AAEA,OAAO,MAAM,+EAAoC\"}")
== DIAGNOSTICS ==

[]
